front/stylesheets/style.css
/* ... */
.main-sidebar .sidebar {
  height: calc(100vh - var(--topbar-height));
}

.sidebar {
  overflow-x: hidden;
  overflow-y: auto;
  padding-bottom: 0.5rem;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0.5rem;
  background-color: var(--sidebar-bg);
  color: white;
}
.sidebar ul li {
  list-style: none;
}
.sidebar a:hover {
  text-decoration: none;
}

ul.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  list-style: none;
}

.page-title {
  height: 50px;
}
.page-title h1 {
  font-size: 1.75rem;
  margin: 6px;
}
.page-title input[type=text] {
  font-size: 1.75rem;
  font-weight: 500;
}
.page-title a.btn,
.page-title button[type=button] {
  margin: 5px;
}

.page-subtitle {
  margin-bottom: 5px;
}
.page-subtitle h2 {
  font-size: 1.5rem;
  font-weight: 500;
  margin: 5px 10px;
}
.page-subtitle a.btn,
.page-subtitle button[type=button] {
  margin: 5px;
}
.page-subtitle a.nav-link {
  color: var(--bs-body-color);
}

.card-frame,
.button-frame {
  padding: 10px;
}

.button-frame {
  border: 1px solid var(--bs-card-border-color);
  border-radius: 4px;
}

.number {
  text-align: right;
}

.text {
  text-align: left;
}

.fontsize-12pt {
  font-size: 12pt;
}

th {
  text-align: center !important;
}

.over,
tr.over,
tr.over td {
  background-color: #4cd964;
}

.form-control,
.form-select {
  background-color: white;
}

.brand-container {
  align-items: center;
  background-color: var(--header-bg-color);
  display: flex;
  flex: 0 0 250px;
  font-size: 1.25rem;
  overflow: hidden;
  padding: 0.5rem 0.5rem;
  transition: width 0.3s ease-in-out;
  white-space: nowrap;
  width: 250px;
}
.brand-container .pushmenu {
  color: var(--body-color);
}
.brand-container .brand-link {
  align-items: center;
  color: #fff;
  display: flex;
}
.brand-container .brand-link .brand-image {
  line-height: 0.8;
  margin-left: 0.8rem;
  margin-right: 0.5rem;
  margin-top: -3px;
  max-height: 33px;
  width: auto;
}

.fw-light {
  font-weight: 300 !important;
}

.bg-light {
  --bs-bg-opacity: 1;
  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
}

.layout-fixed:not(.sidebar-horizontal) .main-sidebar {
  bottom: 0;
  float: none;
  left: 0;
  position: fixed;
  top: auto;
}

.login-page,
.register-page,
.setup-page {
  align-items: center;
  background-color: #e9ecef;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: center;
}

.login-box,
.register-box {
  width: 360px;
}

.login-logo,
.register-logo {
  font-size: 2.1rem;
  font-weight: 300;
  margin-bottom: 0.9rem;
  text-align: center;
}

.login-box .card,
.register-box .card {
  margin-bottom: 0;
}

.login-logo img {
  width: 45px;
}

.entry,
.list {
  padding-top: 20px;
}
.entry .application,
.list .application {
  padding: 0;
  margin-top: 2px;
  height: 20px;
}

.entry-content {
  padding-top: 20px;
}

.entry .content .body {
  background-color: #fff;
  padding: 2em 1em;
  border-radius: 0.3rem;
}
.entry .content .footer {
  padding: 10px 5px;
}

.document .view {
  padding: 10px;
  min-height: 70px;
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #ccc;
}
.document .view .markdown {
  margin: 0px;
}
.document .view .markdown img {
  max-width: 100%;
}
.document .editor {
  height: 800px;
  padding: 0;
  border-radius: 4px;
}
.document .editor .row {
  margin: 0;
  padding: 0;
}
.document .editor .html {
  height: 800px;
  padding: 0 5px;
  overflow: auto;
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #ccc;
}
.document .abstract {
  margin: 0;
  padding: 10px;
  height: 70px;
  overflow: hidden;
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #ccc;
}
.document .file {
  margin: 5px 0;
  min-height: 200px;
  padding: 10px;
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #ccc;
}

.tox-promotion,
.tox-statusbar__branding {
  display: none;
}

a.link {
  text-decoration: none;
  color: var(--bs-link-color);
}

.grid-stack {
  position: relative;
  display: block;
  width: 100%;
  min-height: 100%;
}
.grid-stack .grid-stack-item-content {
  font-size: 1rem;
  min-height: 40px;
  padding: 0px;
  height: 100%;
  box-sizing: border-box;
  border-radius: 5px;
  overflow-y: hidden !important;
  display: flex;
  flex-direction: column;
}

.menu-header {
  background-color: var(--bs-card-bg);
  color: var(--bs-body-color);
  padding: 4px;
}
.menu-header a.link {
  text-decoration: none;
  color: var(--bs-link-color);
}

.menu {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  background-color: var(--bs-card-bg);
  border-top: 1px solid var(--bs-border-color);
}
.menu .header {
  height: 40px;
  flex: 0 0 auto;
  margin: 10px 10px;
}
.menu .text {
  font-weight: bold;
  font-size: 12pt;
  padding: 5px 15px;
}
.menu .body {
  flex: 1 1 auto;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0 0 20px 0;
  box-sizing: border-box;
}
.menu .body .description,
.menu .body form {
  padding: 10px;
}
.menu .body .table {
  margin-bottom: 25px;
  --bs-table-bg: var(--bs-card-bg);
}
.menu .body .list-group {
  --bs-list-group-bg: var(--bs-card-bg);
}
.menu .footer {
  height: 40px;
  flex: 0 0 auto;
  margin: -10px 10px 10px 10px;
}
.menu .list-group-item:first-child {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
.menu .list-group-item:last-child {
  border-bottom: none;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.iconify {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 3px;
  width: 1em;
  height: 1em;
}

.btn-narrow {
  padding-left: 0.3rem;
  padding-right: 0.3rem;
}

.journal .tax,
.crossslip .tax,
table.details .tax {
  width: 120px;
  font-weight: bold;
}
.journal .input,
.crossslip .input,
table.details .input {
  padding: 0;
}
/* ========== PRIMARY ========== */
.btn-primary {
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
  color: #fff;
}
/* ... */

